ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: api.oruiz.com
    http:
      paths:
      - path: /helados
        pathType: Prefix
        backend:
          service:
            name: apigo-service
            port:
              number: 8080
